packages/portfolio-site/main/default/objects/Experience_Highlight__c/Experience_Highlight__c.object-meta.xml
<CustomObject>
    <label>Experience Highlight</label>
    <nameField>
        <displayFormat>EH-{0000}</displayFormat>
        <label>Experience Highlight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experience Highlights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>