packages/portfolio-site/main/default/objects/Experience_Highlight__c/fields/Admin_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Admin_Sort_Order__c</fullName>
    <description>Specific order when resume persona = Admin / Consultant</description>
    <label>Admin Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>