packages/portfolio-site/main/default/objects/Experience_Highlight__c/fields/Architect_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Architect_Sort_Order__c</fullName>
    <description>Specific order when resume persona = Solutions Architect</description>
    <label>Architect Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>