packages/portfolio-site/main/default/objects/Experience_Highlight__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The specific accomplishment or responsibility text for the resume.</description>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
    <required>true</required>
</CustomField>