packages/portfolio-site/main/default/objects/Experience_Highlight__c/fields/Developer_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Developer_Sort_Order__c</fullName>
    <description>Specific order when resume persona = Developer / Full-Stack</description>
    <label>Developer Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>