packages/portfolio-site/main/default/objects/Experience_Highlight__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <referenceTo>Experience__c</referenceTo>
    <relationshipLabel>Experience Highlights</relationshipLabel>
    <relationshipName>Experience_Highlights</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>