packages/portfolio-site/main/default/objects/Experience_Highlight__c/fields/Lock_Sort_Across_Personas__c.field-meta.xml
<CustomField>
    <fullName>Lock_Sort_Across_Personas__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, changing any persona sort auto-syncs all others (flow-driven)</description>
    <label>Lock Sort Across Personas</label>
    <type>Checkbox</type>
</CustomField>