packages/portfolio-site/main/default/objects/Experience_Highlight__c/fields/Persona_Tag__c.field-meta.xml
<CustomField>
    <fullName>Persona_Tag__c</fullName>
    <description>Determines which resume versions this bullet appears in</description>
    <label>Persona Tag</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>