packages/portfolio-site/main/default/objects/Experience_Highlight__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Fallback sort order and source for auto-sync when Lock is enabled</description>
    <label>Sort Order (Universal)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>